--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
     =========================================== -->
     <footer class="footer">
       <div class="footer-text">
-        <p>Copyright &copy; 2024 by Callmerev | All Rights Reserved.</p>
+        <p>Written by&copy; NDT | All Rights Reserved.</p>
       </div>
 
       <div class="footer-iconTop">
